# api.gen.go
@@ -1,7 +1,7 @@
-// Package api provides primitives to interact with the openapi HTTP API.
+// Package wheniwork provides primitives to interact with the openapi HTTP API.
 //
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
-package api
+package wheniwork
 
 import (
 	"bytes"
@@ -96,14 +96,6 @@ type Login struct {
 	Name      *string              `json:"name,omitempty"`
 	Token     *string              `json:"token,omitempty"`
 	UpdatedAt *time.Time           `json:"updated_at,omitempty"`
-}
-
-// LoginResponse defines model for LoginResponse.
-type LoginResponse struct {
-	Accounts *[]Account `json:"accounts,omitempty"`
-	Login    *Login     `json:"login,omitempty"`
-	Token    *string    `json:"token,omitempty"`
-	Users    *[]User    `json:"users,omitempty"`
 }
 
 // Shift defines model for Shift.
@@ -976,9 +968,14 @@ func (r GetShiftsResponse) StatusCode() int {
 type LoginResponse struct {
 	Body         []byte
 	HTTPResponse *http.Response
-	JSON200      *LoginResponse
-	JSON404      *Error
-	JSONDefault  *Error
+	JSON200      *struct {
+		Accounts *[]Account `json:"accounts,omitempty"`
+		Login    *Login     `json:"login,omitempty"`
+		Token    *string    `json:"token,omitempty"`
+		Users    *[]User    `json:"users,omitempty"`
+	}
+	JSON404     *Error
+	JSONDefault *Error
 }
 
 // Status returns HTTPResponse.Status
@@ -1087,7 +1084,12 @@ func ParseLoginResponse(rsp *http.Response) (*LoginResponse, error) {
 
 	switch {
 	case strings.Contains(rsp.Header.Get("Content-Type"), "json") && rsp.StatusCode == 200:
-		var dest LoginResponse
+		var dest struct {
+			Accounts *[]Account `json:"accounts,omitempty"`
+			Login    *Login     `json:"login,omitempty"`
+			Token    *string    `json:"token,omitempty"`
+			Users    *[]User    `json:"users,omitempty"`
+		}
 		if err := json.Unmarshal(bodyBytes, &dest); err != nil {
 			return nil, err
 		}
